--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
+    "geist": "1.5.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
@@ -53,9 +54,7 @@
     "recharts": "^2.12.2",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.0",
-    "geist": "1.5.1"
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -66,6 +65,7 @@
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
